force-app/main/default/objects/Action_Item__c/Action_Item__c.object-meta.xml
<CustomObject>
    <description>MIBOS - Action item tracking object</description>
    <label>Action Item</label>
    <nameField>
        <displayFormat>ACT-{0000}</displayFormat>
        <label>Item ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Action Items</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>