force-app/main/default/objects/Action_Item__c/fields/Delivery_Phase__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Phase__c</fullName>
    <label>Delivery Phase</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Phase 1 - 1.0 Scope</fullName>
            </value>
            <value>
                <fullName>Phase 1 - 1.5 Scope</fullName>
            </value>
            <value>
                <fullName>Phase 1.5</fullName>
            </value>
            <value>
                <fullName>Phase 2</fullName>
            </value>
            <value>
                <fullName>CPQ Admin</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>