force-app/main/default/objects/Action_Item__c/fields/ForceDev_SB_SF_ID__c.field-meta.xml
<CustomField>
    <fullName>ForceDev_SB_SF_ID__c</fullName>
    <description>Salesforce ID from the ForceDev Sandbox for matching up records</description>
    <externalId>true</externalId>
    <label>ForceDev SB SF ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>