force-app/main/default/objects/Action_Item__c/fields/Name__c.field-meta.xml
<CustomField>
    <fullName>Name__c</fullName>
    <label>Title</label>
    <type>TextArea</type>
</CustomField>