force-app/main/default/objects/Action_Item__c/fields/Primary_Group__c.field-meta.xml
<CustomField>
    <fullName>Primary_Group__c</fullName>
    <label>Primary Group</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Contracts Carve Out Team</fullName>
            </value>
            <value>
                <fullName>MIBOS Consultants</fullName>
            </value>
            <value>
                <fullName>Omnitracs Business</fullName>
            </value>
            <value>
                <fullName>Omnitracs IT</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>