force-app/main/default/objects/Action_Item__c/fields/Primary_Owner__c.field-meta.xml
<CustomField>
    <fullName>Primary_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Primary Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Action_Items</relationshipName>
    <type>Lookup</type>
</CustomField>