force-app/main/default/objects/Action_Item__c/fields/Requirements__c.field-meta.xml
<CustomField>
    <fullName>Requirements__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Requirements</label>
    <referenceTo>Requirements__c</referenceTo>
    <relationshipName>Action_Items</relationshipName>
    <type>Lookup</type>
</CustomField>