force-app/main/default/objects/Action_Item__c/fields/System_Field__c.field-meta.xml
<CustomField>
    <fullName>System_Field__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>System Field</label>
    <referenceTo>System_Field__c</referenceTo>
    <relationshipName>Action_Items</relationshipName>
    <type>Lookup</type>
</CustomField>