force-app/main/default/objects/Action_Item__c/fields/Temp_ICPQ__c.field-meta.xml
<CustomField>
    <fullName>Temp_ICPQ__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Temp:ICPQ</label>
    <type>Checkbox</type>
</CustomField>