force-app/main/default/objects/Action_Item__c/fields/Temp_NCPQ__c.field-meta.xml
<CustomField>
    <fullName>Temp_NCPQ__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Temp:NCPQ</label>
    <type>Checkbox</type>
</CustomField>