force-app/main/default/objects/Action_Item__c/fields/Test_Scenario__c.field-meta.xml
<CustomField>
    <fullName>Test_Scenario__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Test Scenario</label>
    <referenceTo>Test_Scenario__c</referenceTo>
    <relationshipLabel>Action Items</relationshipLabel>
    <relationshipName>Action_Items</relationshipName>
    <type>Lookup</type>
</CustomField>