force-app/main/default/objects/Action_Item__c/fields/Track__c.field-meta.xml
<CustomField>
    <fullName>Track__c</fullName>
    <label>Track</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Customer Support</fullName>
            </value>
            <value>
                <fullName>Data</fullName>
            </value>
            <value>
                <fullName>Executive</fullName>
            </value>
            <value>
                <fullName>Finance</fullName>
            </value>
            <value>
                <fullName>Legal</fullName>
            </value>
            <value>
                <fullName>Marketing</fullName>
            </value>
            <value>
                <fullName>Professional Services</fullName>
            </value>
            <value>
                <fullName>Sales</fullName>
            </value>
            <value>
                <fullName>Sales (Inside)</fullName>
            </value>
            <value>
                <fullName>Sales Operations</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>