force-app/main/default/objects/Action_Item__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Change Request</fullName>
            </value>
            <value>
                <fullName>Code Change</fullName>
            </value>
            <value>
                <fullName>CPQ Config</fullName>
            </value>
            <value>
                <fullName>Data Issue</fullName>
            </value>
            <value>
                <fullName>Decision</fullName>
            </value>
            <value>
                <fullName>Question</fullName>
            </value>
            <value>
                <fullName>SFDC Config</fullName>
            </value>
            <value>
                <fullName>Task</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>