force-app/main/default/objects/Action_Item__c/fields/User_Story__c.field-meta.xml
<CustomField>
    <fullName>User_Story__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>User Story</label>
    <referenceTo>User_Story__c</referenceTo>
    <relationshipName>Action_Items</relationshipName>
    <type>Lookup</type>
</CustomField>