force-app/main/default/objects/Action_Item__c/listViews/Action_Items_by_Delivery_Phase.listView-meta.xml
<ListView>
    <fullName>Action_Items_by_Delivery_Phase</fullName>
    <columns>NAME</columns>
    <columns>Name__c</columns>
    <columns>Delivery_Phase__c</columns>
    <columns>Priority__c</columns>
    <columns>Status__c</columns>
    <columns>Due_Date__c</columns>
    <columns>Track__c</columns>
    <columns>Primary_Owner__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Delivery_Phase__c</field>
        <operation>notEqual</operation>
    </filters>
    <label>Action Items by Delivery Phase</label>
    <language>en_US</language>
</ListView>