force-app/main/default/objects/Action_Item__c/listViews/Action_Items_Created_28_Oct_14.listView-meta.xml
<ListView>
    <fullName>Action_Items_Created_28_Oct_14</fullName>
    <columns>NAME</columns>
    <columns>Type__c</columns>
    <columns>Priority__c</columns>
    <columns>Status__c</columns>
    <columns>Name__c</columns>
    <columns>Due_Date__c</columns>
    <columns>Delivery_Phase__c</columns>
    <columns>Track__c</columns>
    <columns>Primary_Owner__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>10/28/2014 12:00 AM</value>
    </filters>
    <label>Action Items Created 28-Oct-14</label>
    <language>en_US</language>
</ListView>