force-app/main/default/objects/Action_Item__c/listViews/Action_Items_ravi.listView-meta.xml
<ListView>
    <fullName>Action_Items_ravi</fullName>
    <columns>NAME</columns>
    <columns>Type__c</columns>
    <columns>Priority__c</columns>
    <columns>Status__c</columns>
    <columns>Name__c</columns>
    <columns>Due_Date__c</columns>
    <columns>Delivery_Phase__c</columns>
    <columns>Track__c</columns>
    <columns>Primary_Owner__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Primary_Owner__c</field>
        <operation>equals</operation>
        <value>Ravi Gandhi</value>
    </filters>
    <label>Action for Ravi</label>
    <language>en_US</language>
</ListView>