force-app/main/default/objects/Action_Item__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Due_Date__c</columns>
    <columns>Type__c</columns>
    <columns>Status__c</columns>
    <columns>Track__c</columns>
    <columns>Name__c</columns>
    <columns>Primary_Owner__c</columns>
    <columns>Priority__c</columns>
    <columns>User_Story__c</columns>
    <columns>Requirements__c</columns>
    <columns>System_Field__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>