force-app/main/default/objects/Action_Item__c/listViews/All_Action_Items.listView-meta.xml
<ListView>
    <fullName>All_Action_Items</fullName>
    <columns>NAME</columns>
    <columns>Delivery_Phase__c</columns>
    <columns>Type__c</columns>
    <columns>Status__c</columns>
    <columns>Track__c</columns>
    <columns>Name__c</columns>
    <columns>Primary_Owner__c</columns>
    <columns>Priority__c</columns>
    <columns>User_Story__c</columns>
    <columns>Requirements__c</columns>
    <columns>System_Field__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>notEqual</operation>
        <value>Closed</value>
    </filters>
    <label>All Open Action Items</label>
    <language>en_US</language>
</ListView>