force-app/main/default/objects/Action_Item__c/listViews/All_Open_Decisions.listView-meta.xml
<ListView>
    <fullName>All_Open_Decisions</fullName>
    <columns>NAME</columns>
    <columns>Priority__c</columns>
    <columns>Track__c</columns>
    <columns>Status__c</columns>
    <columns>Name__c</columns>
    <columns>Due_Date__c</columns>
    <columns>Primary_Owner__c</columns>
    <columns>Requirements__c</columns>
    <columns>User_Story__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Type__c</field>
        <operation>equals</operation>
        <value>Decision</value>
    </filters>
    <filters>
        <field>Status__c</field>
        <operation>notEqual</operation>
        <value>Closed</value>
    </filters>
    <label>All Open Decisions</label>
    <language>en_US</language>
</ListView>