force-app/main/default/objects/Action_Item__c/listViews/All_Overdue_Action_Items.listView-meta.xml
<ListView>
    <fullName>All_Overdue_Action_Items</fullName>
    <columns>NAME</columns>
    <columns>Type__c</columns>
    <columns>Due_Date__c</columns>
    <columns>Name__c</columns>
    <columns>Primary_Owner__c</columns>
    <columns>Status__c</columns>
    <columns>Priority__c</columns>
    <columns>Track__c</columns>
    <columns>User_Story__c</columns>
    <columns>Requirements__c</columns>
    <columns>System_Field__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Due_Date__c</field>
        <operation>lessThan</operation>
        <value>TODAY</value>
    </filters>
    <filters>
        <field>Status__c</field>
        <operation>notEqual</operation>
        <value>Closed</value>
    </filters>
    <label>All Overdue Action Items</label>
</ListView>