force-app/main/default/objects/Action_Item__c/listViews/Marketing_Action_Items.listView-meta.xml
<ListView>
    <fullName>Marketing_Action_Items</fullName>
    <columns>NAME</columns>
    <columns>Type__c</columns>
    <columns>Due_Date__c</columns>
    <columns>Status__c</columns>
    <columns>Priority__c</columns>
    <columns>Name__c</columns>
    <columns>Primary_Owner__c</columns>
    <columns>Track__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Track__c</field>
        <operation>equals</operation>
        <value>Marketing</value>
    </filters>
    <label>Marketing Action Items</label>
    <language>en_US</language>
</ListView>