force-app/main/default/objects/Action_Item__c/listViews/My_Action_Items.listView-meta.xml
<ListView>
    <fullName>My_Action_Items</fullName>
    <columns>NAME</columns>
    <columns>Test_Scenario__c</columns>
    <columns>Type__c</columns>
    <columns>Due_Date__c</columns>
    <columns>Status__c</columns>
    <columns>Priority__c</columns>
    <columns>Name__c</columns>
    <columns>Track__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Mine</filterScope>
    <label>My Action Items</label>
    <language>en_US</language>
</ListView>