force-app/main/default/objects/Action_Item__c/listViews/Sales_Track.listView-meta.xml
<ListView>
    <fullName>Sales_Track</fullName>
    <columns>NAME</columns>
    <columns>Type__c</columns>
    <columns>Name__c</columns>
    <columns>Description__c</columns>
    <columns>Priority__c</columns>
    <columns>Status__c</columns>
    <columns>Primary_Owner__c</columns>
    <columns>Track__c</columns>
    <columns>Requirements__c</columns>
    <columns>User_Story__c</columns>
    <columns>Due_Date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Track__c</field>
        <operation>includes</operation>
        <value>Sales</value>
    </filters>
    <label>Sales Track</label>
    <language>en_US</language>
</ListView>